--- a/05_schedules.qmd
+++ b/05_schedules.qmd
@@ -37,29 +37,193 @@ personnel_categorized <-
   read_csv(
     "data/csv/personnel.csv",
     col_types = cols(
+      amt_salary = col_double(),
+      amt_benefits = col_double(),
+      amt_direct = col_double(),
+      amt_indirect = col_double(),
+      amt_total = col_double(),
+      amt_unrestricted = col_double(),
+      amt_headcomponent_direct = col_double(),
+      amt_headcomponent_indirect = col_double(),
+      amt_headcomponent_total = col_double(),
+      amt_terminal = col_double(),
+      amt_terminal_to_indirect = col_double(),
+      amt_terminal_restricted = col_double(),
+      .default = col_character()
+    )
+  )
+
+nonpersonnel_categorized <-
+  read_csv(
+    "data/csv/nonpersonnel_cat.csv",
+    col_types = cols(
+      amt_nonbudgetary = col_double(),
+      amt_unallowable = col_double(),
+      amt_excluded = col_double(),
       amt_direct = col_double(),
       amt_indirect = col_double(),
       amt_total = col_double(),
       .default = col_character()
     )
   )
-
-nonpersonnel_categorized <-
-  read_excel("data/nonpersonnel_categorized.xlsx", col_types = "text") %>%
-  mutate(across(
-    c(
-      net_accounted,
-      amt_nonbudgetary,
-      amt_unallowable,
-      amt_excluded,
-      amt_direct,
-      amt_indirect
-    ),
-    \(x) round(as.numeric(x), 2)
-  ))
 ```
 
-D.2: Schedule of Fringe Benefits
+Schedule H: Occupancy
+
+```{r}
+occupancy <-
+  nonpersonnel_categorized %>%
+  filter(is_split_occupancy == 1)
+
+occupancy_total <-
+  occupancy %>%
+  summarize(
+    amt_total = sum(amt_total),
+    amt_direct = sum(amt_direct),
+    amt_indirect = sum(amt_indirect)
+  ) %>%
+  mutate(account_desc = "OCCUPANCY TOTAL")
+
+schedule_h <-
+  occupancy %>%
+  group_by(account_name) %>%
+  summarize(
+    amt_total = sum(amt_total),
+    amt_direct = sum(amt_direct),
+    amt_indirect = sum(amt_indirect)
+  ) %>%
+  arrange(desc(amt_total)) %>%
+  bind_rows(occupancy_total)
+
+schedule_h %>% write_xlsx("schedules/schedule_h.xlsx")
+```
+
+Schedule I: Excluded Costs
+
+TODO:
+
+* Missing cost centers
+
+```{r}
+schedule_i <-
+  nonpersonnel_categorized %>%
+  filter(amt_excluded != 0.00) %>%
+  group_by(costcenter_clean, costcenter_name_clean, account, account_name) %>%
+  summarize(amt_excluded = round(sum(amt_excluded), 2)) %>%
+  ungroup() %>%
+  arrange(costcenter_name_clean, account_name)
+
+schedule_i %>% write_xlsx("schedules/schedule_i.xlsx")
+```
+
+Schedule J: Indirect Costs
+
+* Missing cost centers
+
+```{r}
+schedule_j <-
+  nonpersonnel_categorized %>%
+  filter(amt_indirect != 0.00) %>%
+  group_by(costcenter_clean, costcenter_name_clean, account, account_name) %>%
+  summarize(amt_indirect = round(sum(amt_indirect), 2)) %>%
+  ungroup() %>%
+  arrange(costcenter_name_clean, account_name)
+
+schedule_j_unallowable <-
+  nonpersonnel_categorized %>%
+  filter(amt_unallowable != 0.00) %>%
+  group_by(costcenter_clean, costcenter_name_clean, account, account_name) %>%
+  summarize(amt_unallowable = round(sum(amt_unallowable), 2)) %>%
+  ungroup() %>%
+  arrange(costcenter_name_clean, account_name)
+
+schedule_j %>% write_xlsx("schedules/schedule_j.xlsx")
+
+schedule_j_unallowable %>% write_xlsx("schedules/schedule_j_unallowable.xlsx")
+```
+
+A
+
+```{r}
+personnel_by_costcenter <-
+  personnel_categorized %>%
+  group_by(costcenter_clean) %>%
+  summarize(
+    amt_direct_ps = sum(amt_direct),
+    amt_indirect_ps = sum(amt_indirect),
+    amt_total_ps = sum(amt_total),
+    .groups = "drop"
+  )
+
+nonpersonnel_by_costcenter <-
+  nonpersonnel_categorized %>%
+  group_by(costcenter_clean) %>%
+  summarize(
+    amt_nonbudgetary = sum(amt_nonbudgetary),
+    amt_unallowable = sum(amt_unallowable),
+    amt_excluded = sum(amt_excluded),
+    amt_direct_nps = sum(amt_direct),
+    amt_indirect_nps = sum(amt_indirect),
+    .groups = "drop"
+  ) %>%
+  mutate(
+    amt_budgetary = amt_unallowable + amt_excluded + amt_direct_nps + amt_indirect_nps,
+    amt_unallowable_excluded = amt_unallowable + amt_excluded,
+    amt_total_nps = amt_nonbudgetary + amt_unallowable + amt_excluded + amt_direct_nps + amt_indirect_nps,
+  )
+
+total_by_costcenter <-
+  bind_rows(
+    select(personnel_categorized, costcenter_name_clean, costcenter_clean),
+    select(nonpersonnel_categorized, costcenter_name_clean, costcenter_clean)
+  ) %>%
+  distinct() %>%
+  left_join(personnel_by_costcenter, by = join_by(costcenter_clean)) %>%
+  left_join(nonpersonnel_by_costcenter, by = join_by(costcenter_clean)) %>%
+  mutate(across(where(is_double), \(x) replace_na(x, 0.00))) %>%
+  mutate(
+    amt_direct = amt_direct_ps + amt_direct_nps,
+    amt_indirect = amt_indirect_ps + amt_indirect_nps,
+    amt_total = amt_total_ps + amt_total_nps
+  ) %>%
+  select(
+    costcenter_clean, costcenter_name_clean,
+    amt_total, amt_unallowable_excluded,
+    amt_direct_ps, amt_direct_nps, amt_direct,
+    amt_indirect_ps, amt_indirect_nps, amt_indirect
+  ) %>%
+  arrange(costcenter_name_clean)
+
+total_by_costcenter %>% write_xlsx("schedules/total_by_costcenter.xlsx")
+```
+
+D.1
+
+```{r}
+schedule_d1 <-
+  personnel_categorized %>%
+  select(!starts_with("amt_terminal")) %>%
+  group_by(
+    costcenter_name_clean, categorization,
+    name_clean, title, headcomponent,
+  ) %>%
+  summarize(
+    amt_salary = sum(amt_salary),
+    amt_benefits = sum(amt_benefits),
+    amt_direct = sum(amt_direct),
+    amt_indirect = sum(amt_indirect),
+    amt_unrestricted = sum(amt_unrestricted),
+    amt_headcomponent_direct = sum(amt_headcomponent_direct),
+    amt_headcomponent_indirect = sum(amt_headcomponent_indirect),
+    amt_headcomponent_total = sum(amt_headcomponent_total),
+    .groups = "drop"
+  ) %>%
+  relocate(categorization)
+
+schedule_d1 %>% write_xlsx("schedules/schedule_d1.xlsx")
+```
+
+D.2
 
 ```{r}
 fringe_other <- c(
@@ -97,112 +261,32 @@ schedule_d2 <-
 schedule_d2 %>% write_xlsx("schedules/schedule_d2.xlsx")
 ```
 
-Schedule H: Occupancy
+E
 
 ```{r}
-occupancy <-
-  nonpersonnel_categorized %>%
-  filter(is_split_occupancy == 1)
-
-occupancy_total <-
-  occupancy %>%
-  summarize(
-    net_accounted = sum(net_accounted),
-    amt_direct = sum(amt_direct),
-    amt_indirect = sum(amt_indirect)
-  ) %>%
-  mutate(account_desc = "OCCUPANCY TOTAL")
-
-schedule_h <-
-  occupancy %>%
-  group_by(account_desc) %>%
-  summarize(
-    net_accounted = sum(net_accounted),
-    amt_direct = sum(amt_direct),
-    amt_indirect = sum(amt_indirect)
-  ) %>%
-  arrange(desc(net_accounted)) %>%
-  bind_rows(occupancy_total)
-
-schedule_h %>% write_xlsx("schedules/schedule_h.xlsx")
-```
-
-Schedule I: Excluded Costs
-
-TODO:
-
-* Missing cost centers
-
-```{r}
-schedule_i <-
-  nonpersonnel_categorized %>%
-  filter(amt_excluded != 0.00) %>%
-  group_by(costcenter_clean, costcenter_name_clean, account, account_desc) %>%
-  summarize(amt_excluded = round(sum(amt_excluded), 2)) %>%
-  ungroup() %>%
-  arrange(costcenter_name_clean, account_desc)
-
-schedule_i %>% write_xlsx("schedules/schedule_i.xlsx")
-```
-
-Schedule J: Indirect Costs
-
-* Missing cost centers
-
-```{r}
-schedule_j <-
-  nonpersonnel_categorized %>%
-  filter(amt_indirect != 0.00) %>%
-  group_by(costcenter_clean, costcenter_name_clean, account, account_desc) %>%
-  summarize(amt_indirect = round(sum(amt_indirect), 2)) %>%
-  ungroup() %>%
-  arrange(costcenter_name_clean, account_desc)
-
-schedule_j_unallowable <-
-  nonpersonnel_categorized %>%
-  filter(amt_unallowable != 0.00) %>%
-  group_by(costcenter_clean, costcenter_name_clean, account, account_desc) %>%
-  summarize(amt_unallowable = round(sum(amt_unallowable), 2)) %>%
-  ungroup() %>%
-  arrange(costcenter_name_clean, account_desc)
-
-schedule_j %>% write_xlsx("schedules/schedule_j.xlsx")
-
-schedule_j_unallowable %>% write_xlsx("schedules/schedule_j_unallowable.xlsx")
-```
-
-Schedule A: Total Costs
-
-* Missing cost centers
-
-```{r}
-personnel_by_costcenter <-
+schedule_e <-
   personnel_categorized %>%
-  group_by(costcenter_clean, costcenter_name_clean) %>%
-  summarize(
-    amt_direct_ps = sum(amt_direct),
-    amt_indirect_ps = sum(amt_indirect),
-    amt_total_ps = sum(amt_total)
+  filter(amt_terminal != 0.00) %>%
+  select(!c(
+    amt_salary, amt_benefits, amt_total,
+    amt_direct, amt_indirect, amt_unrestricted,
+    amt_headcomponent_direct, amt_headcomponent_indirect, amt_headcomponent_total
+  )) %>%
+  group_by(
+    costcenter_name_clean, categorization,
+    name_clean, title, headcomponent,
   ) %>%
-  arrange(costcenter_name_clean)
-
-nonpersonnel_by_costcenter <-
-  nonpersonnel_categorized %>%
-  group_by(costcenter_clean, costcenter_name_clean) %>%
   summarize(
-    amt_nonbudgetary = sum(amt_nonbudgetary),
-    amt_unallowable = sum(amt_unallowable),
-    amt_excluded = sum(amt_excluded),
-    amt_direct_nps = sum(amt_direct),
-    amt_indirect_nps = sum(amt_indirect),
-    amt_budgetary = sum(amt_unallowable + amt_excluded + amt_direct + amt_indirect),
-    amt_unallowable_excluded = sum(amt_unallowable + amt_excluded)
+    amt_terminal = sum(amt_terminal),
+    amt_terminal_unrestricted = sum(amt_terminal_to_indirect),
+    amt_terminal_restricted = sum(amt_terminal_restricted),
+    .groups = "drop"
   ) %>%
-  arrange(costcenter_name_clean)
+  relocate(categorization)
 
-total_by_costcenter <-
-  personnel_by_costcenter %>%
-  full_join(nonpersonnel_by_costcenter, by = join_by(costcenter_clean))
+schedule_e %>% write_xlsx("schedules/schedule_e.xlsx")
+```
 
-total_by_costcenter %>% write_xlsx("schedules/total_by_costcenter.xlsx")
+```{r}
+Sys.time()
 ```
